# SI5-Forest-Fires

./: .gitignore  README.md  docker-compose.cloud.yml  docker-compose.edge.yml  docker-compose.fog.yml  docker-compose.yml  mosquitto.conf
configs/connect/: bridge.yaml  input.yaml  output.yaml
configs/nginx/: default.conf
docs/architecture/: arch.typ  arch_risk.typ  avant-propos.typ  intro.typ  main.typ  needs.typ  risks.typ
docs/architecture/figs/: context_map.typ  data_sources.typ  etat_metier.old.typ  etat_metier.typ  global.typ  services.old.typ  services.rly_old.typ  services.typ
docs/data/: avant_propos.typ  capteurs.typ  incertitudes.typ  main.typ  pipeline.typ  refs.yml  traitement.typ
docs/data/figs/: pipeline.typ  traitements.typ
src/cloud/api/: .dockerignore  Cargo.toml  Dockerfile
src/cloud/api/src/: main.rs  messages.rs  redpanda_listener.rs  redpanda_utils.rs  redpanda_watcher.rs
src/cloud/geojson_producer/: Cargo.toml  Dockerfile
src/cloud/geojson_producer/src/: main.rs  map_message.rs  minio_worker.rs  process.rs  redpanda_worker.rs
src/cloud/webui/: .dockerignore  Dockerfile  README.md  index.html  package.json
src/cloud/webui/src/: App.css  App.tsx  index.tsx  types.ts
src/cloud/webui/src/components/: Header.tsx  InfoPanel.tsx  MapContainer.tsx  WindIndicator.tsx  header.css  info-panel.css  map-container.css  wind-indicator.css
src/edge/: base_propa_et_simu.py  meteo.py
src/edge/filter/: filters.py  main.py  pyproject.toml
src/edge/simulation/: Dockerfile  engine.py  environment.py  main.py  map.geojson  pyproject.toml  sensor.py
src/edge/treatment/: Dockerfile  compress.py  discrete.py  filter.py  main.py  process.py  pyproject.toml
src/fog/pre-treatment/: Cargo.toml  Dockerfile
src/fog/pre-treatment/src/: logger.rs  main.rs  messages.rs  minio_worker.rs  parser.rs  process.rs  raw_messages.rs  redpanda_worker.rs  station_config.rs
src/fog/propagation/: main.py  pyproject.toml
src/utils/rust_shared/: Cargo.toml
src/utils/rust_shared/src/: lib.rs  redpanda_utils.rs
