[package]
name = "geojson_producer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Args
clap = { version = "4.5.53", features = ["env"] }

# Logs
log = "0.4.29"
env_logger = "0.11.8"
strfmt = "0.2.5"

# Async Runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Kafka Client
rdkafka = { version = "0.38", features = ["tokio", "cmake-build"] }

# MinIO Client (Official minio-rs)
minio = { git = "https://github.com/minio/minio-rs.git" }

# Serialization
geojson = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
