[package]
name = "pre-treatment"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kafka Client
rdkafka = { version = "0.38", features = ["tokio", "cmake-build"] }

# Async Runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

# MinIO Client (Official minio-rs)
minio = { git = "https://github.com/minio/minio-rs.git" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
nom = "8.0.0"
chrono = "0.4.42"

# Error handling
anyhow = "1.0"

# Args
clap = { version = "4.5.53", features = ["env"] }

# Logs
log = "0.4.29"
env_logger = "0.11.8"
strfmt = "0.2.5"
