[package]
name = "rust_shared"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
# Logs
log = "0.4.29"
env_logger = "0.11.8"
strfmt = "0.2.5"

# Async Runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Kafka Client
rdkafka = { version = "0.38", features = ["tokio", "cmake-build"] }
